# tgb_dual_mp

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
config/: AppMenu.json
emscripten/: .gitignore  api.js  build.sh  post.js  pre.js
emscripten/tgb_dual_8_3_src/: CMakeLists.txt
emscripten/tgb_dual_8_3_src/gb_core/: apu.cpp  cheat.cpp  cpu.cpp  gb.cpp  gb.h  gb_types.h  lcd.cpp  mbc.cpp  op_cb.h  op_normal.h  renderer.h  rom.cpp
emscripten/tgb_dual_8_3_src/gbr_interface/: gbr.cpp  gbr.h
emscripten/tgb_dual_8_3_src/web_ui/: dmy_renderer.cpp  dmy_renderer.h  exports.h  glue.cpp  web_renderer.cpp  web_renderer.h
html/: KeyConfig.html  Log.html  Main.html  PathConfig.html  SoundConfig.html  SpeedConfig.html  Version.html  tgb_dual.js  tgb_dual.js.mem  tgb_dual.wasm
html/css/: KeyConfig.css  Log.css  Main.css  PathConfig.css  SoundConfig.css  SpeedConfig.css  Version.css
languages/: ja.json
src/: CanvasRenderer.ts  Constants.ts  Gamepads.ts  KeyCode.ts  MainMenu.ts  NodeMain.ts  RendererUtility.ts  SoundPlayer.ts  TgbDual.ts  WaveFileWriter.ts
src/config/: Config.ts  GamepadConfig.ts  KeyConfig.ts  MiscConfig.ts  PathConfig.ts  ScreenConfig.ts  SoundConfig.ts  SpeedConfig.ts  WindowConfig.ts
src/dialogs/: ErrorBox.ts  MessageBox.ts  OpenDialog.ts  SaveDialog.ts
src/windows/: KeyConfigRenderer.ts  KeyConfigWindow.ts  LogRenderer.ts  LogWindow.ts  MainRenderer.ts  MainWindow.ts  PathConfigRenderer.ts  PathConfigWindow.ts  SoundConfigRenderer.ts  SoundConfigWindow.ts  SpeedConfigRenderer.ts  SpeedConfigWindow.ts  VersionWindow.ts
